fixed height on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,8 @@
 body {
   transition: all 0.76s ease-in-out;
 }
+@media screen and (max-width: 600px) and (max-height: 800px) {
+  .h-1450 {
+    height: 850px;
+  }
+}
